# data_mining

./: .gitignore  Cargo.toml  README.md  a.sbatch  report.html  script.bash  singularity.def
.github/workflows/: rust.yml
crates/apriori/: Cargo.toml
crates/apriori/src/: apriori.rs  apriori_data.rs  apriori_hybrid.rs  apriori_tid.rs  apriori_trie.rs  array2d.rs  candidate.rs  candidates.rs  candidates_func.rs  candidates_tid.rs  hash_tree.rs  lib.rs  transaction_id.rs  trie.rs
crates/apriori/tests/: apriori.rs
crates/apriori/tests/common/: mod.rs
crates/count_distribution/: Cargo.toml
crates/count_distribution/src/: count_distribution.rs  count_distribution2.rs  count_distribution_hybrid.rs  lib.rs  proccess.rs  process.rs  process2.rs  process_hybrid.rs
crates/count_distribution/tests/: apriori.rs
crates/datasets/: Cargo.toml
crates/datasets/src/: lib.rs  transaction_set.rs  utils.rs
crates/dhp/: Cargo.toml
crates/dhp/src/: dhp.rs  hash_table.rs  lib.rs
crates/fp_growth/: Cargo.toml
crates/fp_growth/src/: fp_growth.rs  fp_tree.rs  lib.rs
crates/fp_growth/tests/: fp_growth.rs
crates/maxminer/: Cargo.toml
crates/maxminer/src/: frequent.rs  lib.rs  max_miner.rs  tree.rs
crates/tester/: Cargo.toml
crates/tester/src/: test_utils.rs
src/: apriori.rs  apriori_hybrid.rs  apriori_tid.rs  apriori_trie.rs  count_distribution.rs  count_distribution_hybrid.rs  fp_growth.rs  lib.rs  main.rs  maxminer.rs
